@@ -82,6 +82,7 @@ Changelog
  * Maintenance: Extracted revision and draft state logic from generic views into mixins (Sage Abdullah)
  * Maintenance: Extracted generic lock / unlock views from page lock / unlock views (Sage Abdullah)
  * Maintenance: Move `identity` JavaScript util into shared utils folder (LB (Ben Johnston))
+ * Maintenance: Remove unnecessary declaration of function to determine URL query params, instead use `URLSearchParams` (Loveth Omokaro)
 
 
 4.1.2 (xx.xx.xxxx) - IN DEVELOPMENT
